# swar-demo

./: CMakeLists.txt  README.md  main.cpp  swar-strlen.h  utils.h
